[tool.poetry]
name = "rap"
version = "0.5.2.2"
description = "rap(par[::-1]) is a simple and fast python async rpc"
authors = ["So1n <so1n897046026@gamil.com>"]
license = "Apache Software License"
readme = "./README.md"
repository = "https://github.com/so1n/rap"
homepage = "https://github.com/so1n/rap"

[tool.poetry.dependencies]
python = "^3.7"
msgpack = "^1.0.0"
pycrypto = "2.6.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
mypy = "^0.790"
pytest = "^6.1.2"

[tool.black]
line-length = 120
target-version = ['py37']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
