[tool.poetry]
name = "rap"
version = "0.5.3.4"
description = "rap(par[::-1]) is advanced and fast python async rpc"
authors = ["So1n <so1n897046026@gamil.com>"]
license = "Apache Software License"
readme = "./README.md"
repository = "https://github.com/so1n/rap"
homepage = "https://github.com/so1n/rap"

[tool.poetry.dependencies]
python = "^3.7"
msgpack = "^1.0.0"
pycrypto = "2.6.1"
aioredis = "1.3.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
mypy = "^0.790"
pytest = "^6.1.2"
isort = "^5.6.4"

[tool.black]
line-length = 120
target-version = ['py37']

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
